# pyltd2

./: LICENSE  README.md  pyproject.toml  setup.py
constants/: fighters_v9.04.csv  upgrades_tree.json
pyltd2/: __init__.py  _constants.py  exceptions.py  fetcher.py  logger.py  offset_iterator.py  utils.py
