[tool.poetry]
name = "pyltd2"
version = "1.0.0-rc"
description = "Client package for the download of Legion TD 2 game data."
authors = ["GCidd"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/GCidd/pyltd2"
keywords = ["api", "Legion td 2", "fetch", "call"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "Operating System :: Microsoft",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.1"
pandas = "^1.4.3"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
